# Django-Images-with-Cloudflare

./: manage.py  pyproject.toml
Cloudflare/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py
blog/blog/: settings.py
blog/migrations/: 0001_initial.py
images/: models.py
images/images/: settings.py
images/migrations/: 0001_initial.py
